--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-  <div class="container-fluid"
-    id="app"></div>
+  <div id="app"></div>
   <script type="module"
     src="/src/main.ts"></script>
 </body>
