Added head meta tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,65 @@
   <title>Cartes.io</title>
   <link rel="stylesheet"
     href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" />
+
+  <meta name="keywords"
+    content="Cartes.io,maps,mapping,markers,location">
+
+  <meta name="language"
+    content="en">
+
+  <meta name="robots"
+    content="index,follow">
+  <meta name="googlebot"
+    content="index,follow">
+
+  <meta name="author"
+    content="Cartes.io">
+
+  <meta name="coverage"
+    content="Worldwide">
+
+  <meta name="distribution"
+    content="Global">
+
+  <meta property="og:type"
+    content="website">
+
+  <!-- <meta property="fb:app_id"
+  content="{{ config('blog.fb_app_id') }}"> -->
+
+  <!--
+<meta property="og:image"
+  content="@yield('meta_image', config('blog.logo_url'))">
+  <meta name="twitter:image"
+    content="@yield('meta_image', config('blog.logo_url'))"> -->
+
+  <meta property="og:site_name"
+    content="Cartes.io">
+
+  <meta property="og:locale"
+    content="en-GB">
+
+  <meta property="article:author"
+    content="Cartes.io">
+
+  <meta property='article:publisher'
+    content='https://app.cartes.io' />
+
+  <meta name="twitter:card"
+    content="summary">
+
+  <meta name="twitter:url"
+    content="https://app.cartes.io">
+
+  <meta name="description"
+    content="Create free anonymous or public maps without even having to sign up.)">
+
+  <meta name="twitter:description"
+    content="Create free anonymous or public maps without even having to sign up.">
+
+  <meta name="og:description"
+    content="Create free anonymous or public maps without even having to sign up.">
 </head>
 
 <body>
