Added head meta tags

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     content="https://app.cartes.io">
 
   <meta name="description"
-    content="Create free anonymous or public maps without even having to sign up.)">
+    content="Create free anonymous or public maps without even having to sign up.">
 
   <meta name="twitter:description"
     content="Create free anonymous or public maps without even having to sign up.">
