Added simple Schema handling

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
 
   <meta name="og:description"
     content="Create free anonymous or public maps without even having to sign up.">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Cartes.io",
+      "applicationCategory": "BrowserApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0"
+      }
+    }
+  </script>
 </head>
 
 <body>
