Added theme color

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <link rel="manifest"
     href="/site.webmanifest">
 
+  <meta name="theme-color"
+    content="#1095c1" />
+
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0" />
   <title>Cartes.io</title>
