Description update, require email verification to create token

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
     content="https://app.cartes.io">
 
   <meta name="description"
-    content="Create free anonymous or public maps without even having to sign up.">
+    content="Create free anonymous or public live and realtime maps without even having to sign up.">
 
   <meta name="twitter:description"
-    content="Create free anonymous or public maps without even having to sign up.">
+    content="Create free anonymous or public live and realtime maps without even having to sign up.">
 
   <meta name="og:description"
-    content="Create free anonymous or public maps without even having to sign up.">
+    content="Create free anonymous or public live and realtime maps without even having to sign up.">
 
   <script type="application/ld+json">
     {
